--- a/ansible/zion.yml
+++ b/ansible/zion.yml
@@ -5,7 +5,7 @@
 
   roles:
     - { role: manala.apt }
-    - { role: weareinteractive.ufw }
+    #- { role: weareinteractive.ufw }
     - { role: azavea.docker }
     - { role: azavea.pip }
     - { role: zion.bootstrap }
