Fix server host and ansible verbose message
Disable unneeded Ansible inventory plugins

--- a/ansible/inventory/servers.yml
+++ b/ansible/inventory/servers.yml
@@ -2,9 +2,12 @@
 homelab:
   hosts:
     zion:
-      ansible_host: ZION
+      ansible_host: hex.tq.rs
       ansible_user: automation
       ansible_connection: ssh
 do:
   hosts:
     dozer:
+      ansible_host: dozer.qt.rs
+      ansible_user: automation
+      ansible_connection: ssh
