Validate sshd config in boostrap role

--- a/ansible/roles/zion.bootstrap/tasks/main.yml
+++ b/ansible/roles/zion.bootstrap/tasks/main.yml
@@ -63,4 +63,5 @@
     regexp: "^#Banner\ *none"
     replace: "Banner /etc/issue.net"
     backup: yes
+    validate: /usr/sbin/sshd -t -f %s
   notify: reload sshd
