--- a/ansible/roles/zion.traefik/tasks/main.yml
+++ b/ansible/roles/zion.traefik/tasks/main.yml
@@ -3,7 +3,7 @@
 ### given it has access to the docker daemon
 
 - name: create traefik user and group
-- block:
+  block:
   - group:
       name: traefik
       state: present
@@ -25,8 +25,8 @@
     group: root
     mode: 0755
   loop:
-    - {{ traefik_config_folder }}
-    - {{ traefik_logs_folder }}
+    - "{{ traefik_config_folder }}"
+    - "{{ traefik_logs_folder }}"
 
 - name: Copy Traefik configuration
   template:
