Fix ansible task name
The docker_compose task is the new name of docker_service starting from
Ansible 2.8

--- a/ansible/roles/zion.traefik/handlers/main.yml
+++ b/ansible/roles/zion.traefik/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
-- name: Reload Traefik
-  docker_compose:
+- name: reload traefik
+  docker_service:
     project_name: traefik
     project_src: "{{ traefik_config_folder }}"
     files:
