Remove dependencies in ansible roles

--- a/ansible/roles/zion.bootstrap/meta/main.yml
+++ b/ansible/roles/zion.bootstrap/meta/main.yml
@@ -1,4 +1,4 @@
 ---
-dependencies:
-  - { role: manala.apt }
-  - { role: azavea.pip }
+# dependencies:
+#   - { role: manala.apt }
+#   - { role: azavea.pip }
