--- a/ansible/roles/zion.docker/meta/main.yml
+++ b/ansible/roles/zion.docker/meta/main.yml
@@ -1,4 +1,4 @@
 ---
-dependencies:
-  - { role: azavea.docker }
-  - { role: azavea.pip }
+# dependencies:
+#   - { role: azavea.docker }
+#   - { role: azavea.pip }
