Use pip2 instead of pip3 to install dependencies
The docker_service task uses python 2.

--- a/ansible/roles/zion.bootstrap/tasks/main.yml
+++ b/ansible/roles/zion.bootstrap/tasks/main.yml
@@ -53,11 +53,12 @@
 - name: Install python packages
   pip:
     name:
-      - docker
       - requests
+      - docker
       - docker-compose
+      - pyyaml
     state: present
-    executable: pip3
+    executable: pip2
 
 - name: Add login banner
   template:
