--- a/ansible/zion.yml
+++ b/ansible/zion.yml
@@ -6,10 +6,10 @@
   roles:
     - { role: manala.apt, tags: seeding }
     #- { role: weareinteractive.ufw }
-    - { role: azavea.docker, tags: docker }
     - { role: azavea.pip, tags: seeding }
     - { role: zion.bootstrap, tags: seeding }
     - { role: zion.docker, tags: docker }
+    - { role: nickjj.docker, tags: [ docker, seeding ] }
     # - { role: zion.dns, tags: dns }
     - { role: zion.traefik, tags: [ reverse-proxy, web ] } #
     # - { role: zion.mediaserver, tags: mediaserver }
