--- a/ansible/roles/zion.traefik/tasks/main.yml
+++ b/ansible/roles/zion.traefik/tasks/main.yml
@@ -21,8 +21,8 @@
   file:
     path: "{{ item }}"
     state: directory
-    owner: root
-    group: root
+    owner: traefik
+    group: traefik
     mode: 0755
   loop:
     - "{{ traefik_config_folder }}"
@@ -33,8 +33,9 @@
     src: traefik.toml.j2
     dest: "{{ traefik_config_folder }}/traefik.toml"
     mode: 0400
-    owner: root
-    group: root
+    owner: traefik
+    group: traefik
+  no_log: yes
 
 - name: Create Traefik docker network
   docker_network:
@@ -52,9 +53,9 @@
       template:
         src: logrotate.conf.j2
         dest: "{{ traefik_config_folder }}/logrotate.conf"
-        mode: 0644
-        owner: root
-        group: root
+        mode: 0600
+        owner: traefik
+        group: traefik
         force: yes
     - name: Validate Traefik logrotate configuration
       become: yes
@@ -82,6 +83,7 @@
     src: docker-compose.yml.j2
     dest: "{{ traefik_config_folder }}/docker-compose.yml"
     mode: 0400
-    owner: root
-    group: root
+    owner: traefik
+    group: traefik
+  no_log: yes
   notify: reload traefik
