--- a/ansible/roles/zion.pomerium/defaults/main.yml
+++ b/ansible/roles/zion.pomerium/defaults/main.yml
@@ -1,6 +1,9 @@
 pomerium_config_folder: ""
+pomerium_image_version: "pomerium/pomerium:latest"
 pomerium_forward_url: ""
 pomerium_url: ""
 pomerium_prometheus_enabled: yes
 pomerium_prometheus_address: ":9091"
 pomerium_cookie_domain: ""
+pomerium_idp_client_secret: ""
+pomerium_idp_client_id: ""
