--- a/ansible/host_vars/zion/vars.yml
+++ b/ansible/host_vars/zion/vars.yml
@@ -7,6 +7,7 @@ apt-packages:
 
 docker_is_ipv6: no
 docker_address_pool: "172.16.0.0/12"
+# Configuration for the community Docker role
 docker__default_daemon_json: |
   "iptables": false,
   "log-driver": "journald"
@@ -24,5 +25,16 @@ traefik_cert_main: "*.tq.rs"
 traefik_cert_sans:
   - "tq.rs"
 
+pomerium_enabled: yes
 pomerium_config_folder: "/srv/pomerium"
+pomerium_image_version: "pomerium/pomerium:latest"
+pomerium_forward_url: "auth.tq.rs"
+pomerium_url: "auth.tq.rs"
+pomerium_prometheus_enabled: yes
+pomerium_prometheus_address: ":9091"
+pomerium_cookie_domain: "tq.rs"
+pomerium_cookie_secret: "{{ vault_pomerium_cookie_secret }}"
+pomerium_idp_client_secret: "{{ vault_pomerium_idp_client_secret }}"
+pomerium_allowed_users: "{{ vault_pomerium_admin_users }}"
+
 letsencrypt_staging: False
