Fix missing docker-compose in Pomerium handler

--- a/ansible/roles/zion.pomerium/handlers/main.yml
+++ b/ansible/roles/zion.pomerium/handlers/main.yml
@@ -7,3 +7,5 @@
     restarted: yes
     # Update the image when restarting
     pull: yes
+  vars:
+    ansible_python_interpreter:  "{{ '/usr/bin/env python-docker' }}"
