Configure Pomerium for Traefik and whoami
The only problem is that the cookie cannot be shared
across subdomains because of an "invalid audience claim".

TODO: Replace Pomerium with traefik-forward-auth (yeah...)

--- a/ansible/roles/zion.pomerium/defaults/main.yml
+++ b/ansible/roles/zion.pomerium/defaults/main.yml
@@ -1,7 +1,7 @@
 pomerium_config_folder: ""
 pomerium_image_version: "pomerium/pomerium:latest"
 pomerium_forward_url: ""
-pomerium_url: ""
+pomerium_authenticate_url: ""
 pomerium_prometheus_enabled: yes
 pomerium_prometheus_address: ":9091"
 pomerium_cookie_domain: ""
