--- a/ansible/host_vars/zion/vars.yml
+++ b/ansible/host_vars/zion/vars.yml
@@ -28,8 +28,8 @@ traefik_cert_sans:
 pomerium_enabled: yes
 pomerium_config_folder: "/srv/pomerium"
 pomerium_image_version: "pomerium/pomerium:latest"
-pomerium_forward_url: "http://pomerium"
-pomerium_url: "https://auth.tq.rs"
+pomerium_forward_url: "https://auth.tq.rs"
+pomerium_authenticate_url: "https://fwdauth.tq.rs"
 pomerium_prometheus_enabled: yes
 pomerium_prometheus_address: ":9091"
 pomerium_cookie_domain: "tq.rs"
