Add qbittorrent role
The docker-compose file is not in this commit

--- a/ansible/host_vars/zion/vars.yml
+++ b/ansible/host_vars/zion/vars.yml
@@ -40,3 +40,5 @@ pomerium_idp_client_secret: "{{ vault_pomerium_idp_client_secret }}"
 pomerium_allowed_users: "{{ vault_pomerium_admin_users }}"
 
 letsencrypt_staging: False
+
+qbittorrent_config_folder: "/srv/qbittorrent"
