Change qbittorrent download directory
Also create the download directory if it does not exist

--- a/ansible/host_vars/zion/vars.yml
+++ b/ansible/host_vars/zion/vars.yml
@@ -51,6 +51,6 @@ mediaserver_group: "mediaserver"
 
 qbittorrent_folder: "/srv/qbittorrent"
 qbittorrent_config_folder: "{{qbittorrent_folder}}/config"
-qbittorrent_download_folder: "{{ metacortex }}/torrents"
+qbittorrent_download_folder: "/mnt/torrents/qbittorrent"
 qbittorrent_port: "31337"
 qbittorrent_docker_network: "mediaserver"
